fix cmake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,10 +3,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_library(neural SHARED NeuralNet.cpp)
-add_executable(neural-run main.cpp)
+add_executable(neural main.cpp)
 
 if(UNIX)
-	target_link_libraries(neural-run m neural)
+	target_link_libraries(neural m)
 elseif(WIN32)
 endif()
