--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,9 @@ add_executable(neural-run main.cpp)
 
 if(UNIX)
 	target_link_libraries(neural-run m neural)
-	install (TARGETS neural DESTINATION bin)
+	install (TARGETS neural DESTINATION lib)
 	install (FILES NeuralNetwork.hpp DESTINATION include)
 elseif(WIN32)
+	target_link_libraries(neural-run neural)
 endif()
 
